# Estrutura_Padrao

./: README.md  mkdocs.yml  pyproject.toml
app/: main.py
app/pipeline/: extract.py  load.py  transform.py
docs/: index.md
site/: 404.html  index.html  objects.inv
site/search/: search_index.json
tests/: test_pipeline.py
