[project]
name = "estrutura-projeto"
version = "0.1.0"
description = "Estrutura de Projetos de Python"
authors = [
    {name = "Leonardo Souza",email = "leo.armster1994@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "blue (>=0.9.1,<0.10.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.13,<10.0.0)",
    "mkdocstrings-python (>=1.16.10,<2.0.0)",
    "pymdown-extensions (>=10.15,<11.0)",
    "mkdocs-mermaid2-plugin (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
format = "isort . && blue ."